# datacleaner-app

./: .gitignore  00_项目总控.md  AI_WORKFLOW.md  EULA.md  Jeam任务清单.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.hermes/plans/: 2026-05-19-streaming-large-files.md
02_营销素材/: email-templates-en.md  gumroad-listing-en.md  install-guide-en.md  key-management-sop.md  定价调研报告_20260520.docx  美国法律合规报告_20260520.docx
02_营销素材/脱敏演示/: employee_admin.csv  employee_admin.csv.vault  employee_database_original.csv  employee_database_scrubbed.csv  employee_external.csv  employee_internal.csv  pii-masking-demo-report.html
04_收款与合规/: Gumroad上线清单.md
datacleaner/: __init__.py  cli.py  config.py  generate_licenses.py  license.py  masking.py  recover.py  redactor.py  revocation.py  revoked_keys.json  scanner.py  streaming.py
datacleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
datacleaner/commands/: __init__.py  scrub_dump.py
datacleaner/detectors/: __init__.py  llm_detector.py  patterns.py  regex_detector.py
datacleaner/processors/: __init__.py  csv_processor.py  docx_processor.py  pdf_processor.py  text_processor.py
datacleaner/utils/: __init__.py  converters.py  file_utils.py  streaming_readers.py
docs/: CNAME  blog.html  dmca.html  eula.html  index.html  privacy.html  purchase.html  robots.txt  sitemap.xml  terms.html
docs/blog/: 5-level-pii-masking-engine.html  deterministic-hashing-gdpr.html  streaming-csv-processing.html
tests/: test_converters.py  test_core.py  test_file_utils.py  test_partial_mask.py  test_scrub_dump.py  test_streaming.py
