[project]
name = "datacleaner"
version = "0.1.0"
description = "Local AI-powered PII detection and redaction CLI — zero data leaves your machine"
authors = [{name = "Jeam", email = "contact@getdatacleaner.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["pii", "gdpr", "privacy", "redaction", "ollama", "local-ai", "data-protection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "ollama>=0.4",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
dc = "datacleaner.cli:main"
datacleaner = "datacleaner.cli:main"

[project.urls]
Homepage = "https://getdatacleaner.com"
Repository = "https://github.com/jennifer2026-sz/datacleaner-app"
Issues = "https://github.com/jennifer2026-sz/datacleaner-app/issues"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["datacleaner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
